# ED

./: .gitignore  Basis.cpp  Basis.hpp  BasisTest.cpp  CMakeLists.txt  Geometry.cpp  Geometry.hpp  HelperClass.hpp  HubbardSpecMain.cpp  LANCZOSIterator.hpp  Makefile  Operators.cpp  Operators.hpp  PARPACKSolver.hpp  SparseMatrix.hpp  Spectra.hpp  SpectraMain.cpp  TimeEvolver.hpp  algebra.cpp  algebra.hpp  genBasisMain.cpp  geometryTest.cpp  globalClass.cpp  globalClass.hpp  globalPara.hpp  ground_input.txt  intRun.sh  job_eq_ge.sh  job_ge.sh  job_time_ge.sh  kGroundStateMain.cpp  lapackTest.cpp  main.cpp  para.txt  readme.md  run_haswell.sh  run_knl.sh  run_sherlock.sh  test.cpp  timeTest.cpp  (+2 more)
Algebra/: algebra.cpp  algebra.hpp
Basis/: Basis.cpp  Basis.hpp  BasisBase.hpp  BasisState.cpp  BasisState.hpp
ExcutableSRC/: GroundStateMain.cpp  HubbardCondMain.cpp  HubbardSpecMain.cpp  SpectraMain.cpp  genBasisMain.cpp  heisenberg.cpp  hubbard.cpp  main.cpp
Geometry/: Generator.hpp  Geometry.cpp  Geometry.hpp  Transform.hpp  Vec3.hpp
Global/: config.hpp  constant.hpp  globalPara.hpp  globalType.hpp  links.hpp  typeAlias.hpp
Input/: Hubbard.txt  HubbardMultiband.txt  config.txt  lattice.txt  lattice_input.txt  measure.txt  measurement.txt  params_input.txt  path.txt  pulse.txt  symm_input.txt  time.txt
Input/.ipynb_checkpoints/: lattice_input-checkpoint.txt
Measure/: config.cpp  config.hpp  measure.hpp  system.hpp
Operator/: Operations.hpp  OperatorBasics.hpp  Operators.cpp  Operators.hpp  OperatorsBase.hpp  SparseMatrix.hpp  bond.hpp  interaction.hpp  interaction_transform.hpp  links.cpp  links.hpp  localOperators.hpp
Pulse/: pulse.cpp  pulse.hpp
Solver/: BiCGSTAB.hpp  LANCZOSIterator.hpp  PARPACKSolver.hpp  Spectra.hpp  TimeEvolver.hpp  bicg.hpp  lanczos.hpp
Test/: BasisTest.cpp  BiCGSTAB_Test.cpp  basisState.cpp  geometryTest.cpp  mklTest.cpp  mklTest1.cpp  para.txt  paraTest.cpp  pulseTest.cpp  symmTest.cpp  test.cpp  timeTest.cpp
Trash/: GroundStateMain.cpp  HubbardCondMain.cpp  HubbardSpecMain.cpp  Makefile  SpectraMain.cpp  genBasisMain.cpp  main.cpp
Utils/: HelperClass.hpp  bitop.hpp  comb.cpp  comb.hpp  io.cpp  io.hpp  mpiwrap.hpp  paras.cpp  paras.hpp  path.cpp  path.hpp  pulse.cpp  readWrite.hpp  timer.hpp  utils.cpp  utils.hpp
algebra/: algebra.hpp
basis/: basis.hpp  basisState.cpp  basisState.hpp
geometry/: generator.hpp  geometry.cpp  geometry.hpp  transform.hpp  vec3.hpp
heisInput/: hamiltonian.txt  lattice.txt  measure.txt  path.txt
hubbInput/: hamiltonian.txt  lattice.txt  measure.txt  path.txt  pulse.txt
measure/: config.cpp  measure.hpp  system.hpp
notes/: phonon.md
operator/: bond.hpp  interaction.hpp  interaction_transform.hpp  links.cpp  links.hpp  localOperators.hpp  operators.hpp  operatorsBase.hpp  sparseMatrix.hpp
progSrc/: elph.cpp  heis.cpp  heisenberg.cpp  hubb1bTime.cpp  hubbard.cpp  main.cpp
pulse/: pulse.cpp  pulse.hpp
pyscript/: ExactDiagUtils.py  spectra.py  time.py
solver/: bicg.hpp  lanczos.hpp  parpackSolver.hpp  spectra.hpp  timeEvolver.hpp
test/: BiCGSTAB_Test.cpp  geometryTest.cpp  gslTest.cpp  lapackTest.cpp  pulseTest.cpp  symmTest.cpp  test.cpp  timeTest.cpp
trash/: GroundStateMain.cpp  HubbardCondMain.cpp  HubbardSpecMain.cpp  SpectraMain.cpp  genBasisMain.cpp  main.cpp  run.sh
utils/: bitop.hpp  io.cpp  io.hpp  mpiwrap.hpp  path.cpp  path.hpp  progressBar.hpp  readWrite.hpp  runtimeCheck.hpp  timer.hpp
